laset user block confirm

--- a/views/admin/view-ordersDetails.ejs
+++ b/views/admin/view-ordersDetails.ejs
@@ -168,7 +168,7 @@
                             </p>
                           </td>
                           <td>
-                            <img src="/public/userImage/<%=products.product.image%>"
+                            <img src="/public/userImages/<%=products.product.image%>"
                               class="avatar avatar-sm me-3 border-radius-lg" alt="">
                           </td>
                           <td>
