--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -32,7 +32,7 @@
 </head>
 <body>
     <a href="/">
-    <img src="/public/userAssets/assets/images/BRAND KICKS! white.png" class="md-5" style="height: 60px; position: absolute; top: 20px; left: 20px;" alt="">
+    <img src="/public/assets/images/icons/sacecart-01 1.png" class="md-5" style="height: 60px; position: absolute; top: 20px; left: 20px;" alt="">
     </a>
     <main class="main">
     <!-- <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0">
