--- a/views/layouts/user/header.ejs
+++ b/views/layouts/user/header.ejs
@@ -90,7 +90,7 @@
                         </button>
                         
                         <a href="/home" class="logo">
-                            <img src="/public/assets/images/demos/demo-2/logo.png" alt="Molla Logo" width="105" height="25">
+                            <img src="/public/assets/images/icons/sacecart-01 1.png" alt="Molla Logo" width="105" height="25">
                         </a>
                     </div><!-- End .header-left -->
 
