--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -61,8 +61,8 @@
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-orders" role="tabpanel" aria-labelledby="tab-orders-link">
-                                <p>No order has been made yet.</p>
-                                <a href="category.html" class="btn btn-outline-primary-2"><span>GO SHOP</span><i class="icon-long-arrow-right"></i></a>
+                                <p>click for more order Details.</p>
+                                <a href="/orders" class="btn btn-outline-primary-2"><span>GO To Orders</span><i class="icon-long-arrow-right"></i></a>
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
