--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -194,12 +194,12 @@
 
                             <div id="paymentAccordion">
                                 <!-- Online Payment -->
-                                <div>
+                                <!-- <div>
                                     <input type="radio" name="paymentMethod" value="online" id="onlinePayment">
                                     <label for="onlinePayment" data-toggle="collapse" data-target="#onlinePaymentCollapse" aria-expanded="true" aria-controls="onlinePaymentCollapse">
                                         Online Payment
                                     </label>
-                                </div>
+                                </div> -->
                                 <div id="onlinePaymentCollapse" class="collapse" aria-labelledby="onlinePayment" data-parent="#paymentAccordion"></div>
                             
                                 <!-- Cash on delivery -->
@@ -212,12 +212,12 @@
                                 <div id="cashOnDeliveryCollapse" class="collapse" aria-labelledby="cashOnDelivery" data-parent="#paymentAccordion"></div>
                             
                                 <!-- Wallet -->
-                                <div>
+                                <!-- <div>
                                     <input type="radio" name="paymentMethod" value="wallet" id="walletPayment">
                                     <label for="walletPayment" data-toggle="collapse" data-target="#walletPaymentCollapse" aria-expanded="false" aria-controls="walletPaymentCollapse">
                                         Wallet
                                     </label>
-                                </div>
+                                </div> -->
                                 <div id="walletPaymentCollapse" class="collapse" aria-labelledby="walletPayment" data-parent="#paymentAccordion"></div>
                             </div>
                             
