--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -2,112 +2,224 @@
 
   <body class="g-sidenav-show  bg-gray-200">
 
-    <%- include('../layouts/admin/sidebar.ejs') %>
-      <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+    <aside
+    class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark"
+    id="sidenav-main">
+    <div class="sidenav-header" style="margin: 15px;">
+      <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
+        aria-hidden="true" id="iconSidenav"></i>
+      <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard "
+        target="_blank"></a>
+      <img src="/public/assets/images/icons/sacecart-01 1.png" class="navbar-brand-img h-100" alt="main_logo">
+      <span class="ms-1 font-weight-bold text-white">Material Dashboard</span>
+      </a>
+    </div>
+    <hr class="horizontal light mt-0 mb-2">
+    <!-- <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main"> --> 
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link " href="/admin/home">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">dashboard</i>
+          </div>
+          <span class="nav-link-text ms-1">Dashboard</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white " href="/admin/view-users">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">group</i>
+          </div>
+          <span class="nav-link-text ms-1">Users</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white " href="/admin/view-category">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">inventory_2</i>
+          </div>
+          <span class="nav-link-text ms-1">Category</span>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link text-white active bg-gradient-primary" href="/admin/view-product">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">branding_watermark</i>
+          </div>
+          <span class="nav-link-text ms-1">Porducts</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white " href="/admin/view-brand">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">category</i>
+          </div>
+          <span class="nav-link-text ms-1">Brand</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white " href="/admin/view-orders">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">wysiwyg</i>
+          </div>
+          <span class="nav-link-text ms-1">Orders</span>
+        </a>
+      </li>
+      <li class="nav-item mt-3">
+        <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages
+        </h6>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white " href="./pages/profile.html">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">person</i>
+          </div>
+          <span class="nav-link-text ms-1">Profile</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white " href="/admin/logout">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">logout</i>
+          </div>
+          <span class="nav-link-text ms-1">Log out</span>
+        </a>
+      </li>
+      <!-- <li class="nav-item">
+<a class="nav-link text-white " href="./pages/sign-up.html">
+  <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+    <i class="material-icons opacity-10">assignment</i>
+  </div>
+  <span class="nav-link-text ms-1">Sign Up</span>
+</a>
+</li> -->
+    </ul>
+    <!-- </div> -->
+    <!-- <div class="sidenav-footer position-absolute w-100 bottom-0 ">
+<div class="mx-3">
+<a class="btn bg-gradient-primary mt-4 w-100" href="https://www.creative-tim.com/product/material-dashboard-pro?ref=sidebarfree" type="button">Upgrade to pro</a>
+</div>
+</div> -->
+  </aside>      <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
 
         <%- include('../layouts/admin/navbar.ejs') %>
 
-          <div class="container-fluid py-4">
-            <div class="row">
-              <div class="col-12">
-                <div class="card my-4">
-                  <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                    <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-                      <h6 class="text-white text-capitalize ps-3">
-                        <%=message%>
-                      </h6>
-                    </div>
+        <div class="container-fluid py-4">
+          <div class="row">
+            <div class="col-12">
+              <!-- Card Section -->
+              <div class="card my-4">
+                <!-- Card Header -->
+                <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+                  <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+                    <h6 class="text-white text-capitalize ps-3">
+                      <%=message%>
+                    </h6>
                   </div>
-                  <div class="card-body px-0 pb-2">
-                    <div class="container-fluid">
-                      <form action="/admin/edit-product" enctype="multipart/form-data" method="post" id="editProductForm">
-                        <div class="row">
-                          <div class="col-md-3 py-4">
-                            <div class="form-group">
-                              <div class="form-label rounded">Product Name</div>
-                              <input type="text" value="<%= productData.name %>" name="productName" id="productName"
-                                placeholder="Product Name" required>
-                              <div id="productNameError" class="error-message text-danger"></div>
-                            </div>
+                </div>
+        
+                <!-- Card Body -->
+                <div class="card-body px-0 pb-2">
+                  <div class="container-fluid">
+                    <!-- Edit Product Form -->
+                    <form action="/admin/edit-product" enctype="multipart/form-data" method="post" id="editProductForm">
+                      <div class="row">
+                        <!-- Product Name Input -->
+                        <div class="col-md-3 py-4">
+                          <div class="form-group">
+                            <div class="form-label rounded">Product Name</div>
+                            <input type="text" value="<%= productData.name %>" name="productName" id="productName" placeholder="Product Name" required>
+                            <div id="productNameError" class="error-message text-danger"></div>
                           </div>
-      
-                          <div class="col-md-3 py-4">
-                            <div class="form-group">
-                              <div class="form-label rounded">Category Name</div>
-                              <select id="category" name="category" required>
-                                <% category.forEach(cat => { %>
+                        </div>
+        
+                        <!-- Category Name Dropdown -->
+                        <div class="col-md-3 py-4">
+                          <div class="form-group">
+                            <div class="form-label rounded">Category Name</div>
+                            <select id="category" name="category" required>
+                              <% category.forEach(cat => { %>
                                 <option value="<%= cat.categoryName %>">
                                   <%= cat.categoryName %>
                                 </option>
-                                <% }); %>
-                              </select>
-                              <div id="categoryError" class="error-message text-danger"></div>
-                            </div>
+                              <% }); %>
+                            </select>
+                            <div id="categoryError" class="error-message text-danger"></div>
                           </div>
-      
-                          <div class="col-md-3 py-4">
-                            <div class="form-group">
-                              <div class="form-label rounded">Brand</div>
-                              <select id="brand" name="brand" required>
-                                <% brandData.forEach(brand => { %>
+                        </div>
+        
+                        <!-- Brand Dropdown -->
+                        <div class="col-md-3 py-4">
+                          <div class="form-group">
+                            <div class="form-label rounded">Brand</div>
+                            <select id="brand" name="brand" required>
+                              <% brandData.forEach(brand => { %>
                                 <option value="<%= brand.brandName %>">
                                   <%= brand.brandName %>
                                 </option>
-                                <% }); %>
-                              </select>
-                              <div id="brandError" class="error-message text-danger"></div>
-                            </div>
-                          </div>
-      
-                          <div class="col-md-3 py-4">
-                            <div class="form-group">
-                              <div class="form-label rounded">Quantity</div>
-                              <input type="number" value="<%= productData.qty %>" name="qty" placeholder="Quantity" required>
-                              <div id="qtyError" class="error-message text-danger"></div>
-                            </div>
-                          </div>
-                          
-      
-                          <div class="col-md-3 py-4">
-                            <div class="form-group">
-                              <div class="form-label rounded">Specification</div>
-                              <input type="text" value="<%= productData.description %>" name="description"
-                                placeholder="Description" required>
-                              <div id="descriptionError" class="error-message text-danger"></div>
-                            </div>
-                          </div>
-      
-                          <div class="col-md-3 py-4">
-                            <div class="form-group">
-                              <div class="form-label rounded">Price</div>
-                              <input type="text" value="<%= productData.price %>" name="price" placeholder="Price" required>
-                              <div id="priceError" class="error-message text-danger"></div>
-                            </div>
-                          </div>
-      
-                          <div class="col-md-3 py-4">
-                            <div class="form-group">
-                              <div class="form-label rounded">New Image</div>
-                              <input type="file" name="image" id="image" multiple accept="image/*" required>
-                              <div id="imageError" class="error-message text-danger"></div>
-                            </div>
-                          </div>
-      
-                          <!-- Additional form elements with corresponding IDs and error messages -->
-      
-                          <div class="col-md-3 py-4">
-                            <input type="hidden" name="id" value="<%= productData._id %>">
-                            <button type="submit" class="btn btn-primary">Update</button>
+                              <% }); %>
+                            </select>
+                            <div id="brandError" class="error-message text-danger"></div>
                           </div>
                         </div>
-                      </form>
-                    </div>
+        
+                        <!-- Quantity Input -->
+                        <div class="col-md-3 py-4">
+                          <div class="form-group">
+                            <div class="form-label rounded">Quantity</div>
+                            <input type="number" value="<%= productData.qty %>" name="qty" placeholder="Quantity" required>
+                            <div id="qtyError" class="error-message text-danger"></div>
+                          </div>
+                        </div>
+        
+                        <!-- Specification Input -->
+                        <div class="col-md-3 py-4">
+                          <div class="form-group">
+                            <div class="form-label rounded">Specification</div>
+                            <input type="text" value="<%= productData.description %>" name="description" placeholder="Description" required>
+                            <div id="descriptionError" class="error-message text-danger"></div>
+                          </div>
+                        </div>
+        
+                        <!-- Price Input -->
+                        <div class="col-md-3 py-4">
+                          <div class="form-group">
+                            <div class="form-label rounded">Price</div>
+                            <input type="text" value="<%= productData.price %>" name="price" placeholder="Price" required>
+                            <div id="priceError" class="error-message text-danger"></div>
+                          </div>
+                        </div>
+        
+                        <!-- New Image Input -->
+                        <div class="col-md-3 py-4">
+                          <div class="form-group">
+                            <div class="form-label rounded">New Image</div>
+                            <img src="/public/userImages/<%= productData.image %>" alt="Old Image" style="width: 100px;">
+                            <input type="file" name="image" id="image" multiple accept="image/*" required>
+                            <div id="imageError" class="error-message text-danger"></div>
+                          </div>
+                        </div>
+        
+                        <!-- Additional form elements with corresponding IDs and error messages -->
+        
+                        <!-- Hidden ID Input -->
+                        <div class="col-md-3 py-4">
+                          <input type="hidden" name="id" value="<%= productData._id %>">
+                          <!-- Update Button -->
+                          <button type="submit" class="btn btn-primary">Update</button>
+                        </div>
+                      </div>
+                    </form>
                   </div>
                 </div>
               </div>
             </div>
-            <%- include('../layouts/admin/footer.ejs') %>
           </div>
+          <!-- Include Footer -->
+          <%- include('../layouts/admin/footer.ejs') %>
+        </div>
+        
 
       <!-- </div> -->
                             <!-- <div class="form-check py-4">
