--- a/views/admin/view-orders.ejs
+++ b/views/admin/view-orders.ejs
@@ -14,7 +14,7 @@
                     aria-hidden="true" id="iconSidenav"></i>
                 <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard "
                     target="_blank"></a>
-                <img src="/assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
+                <img src="/public/assets/images/icons/sacecart-01 1.png" class="navbar-brand-img h-100" alt="main_logo">
                 <span class="ms-1 font-weight-bold text-white">Material Dashboard</span>
                 </a>
             </div>
