--- a/views/admin/view-ordersDetails.ejs
+++ b/views/admin/view-ordersDetails.ejs
@@ -21,7 +21,7 @@
             aria-hidden="true" id="iconSidenav"></i>
           <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard "
             target="_blank"></a>
-          <img src="/assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
+          <img src="/public/assets/images/icons/sacecart-01 1.png" class="navbar-brand-img h-100" alt="main_logo">
           <span class="ms-1 font-weight-bold text-white">Material Dashboard</span>
           </a>
         </div>
@@ -194,7 +194,7 @@
                             <p class="text-xs font-weight-bold mb-0">
                               <%=products.orderStatus%>
                             </p>
-                          </td>
+                          </td> 
                           <!--                     
                     <td class=" text-sm">
                       <a href="#">
